--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^5.0.0-alpha.15",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.0",
+    "remove-files-webpack-plugin": "^1.4.4",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
